k8s/Day13/HPA/locust-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: locust-giropops
spec:
  selector:
    app: locust-giropops
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30080
      targetPort: 8089
  type: NodePort
