k8s/Day13/HPA/ingress-6.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/gerar-senha
        pathType: Prefix
        backend:
          service: 
            name: giropops-senhas
            port:
              number: 5000
      - path: /api/senha
        pathType: Prefix
        backend:
          service: 
            name: giropops-senhas
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: giropops-senhas
            port:
              number: 5000              
    host: giropops-senhas.io
