k8s/Day13/HPA/ingress-7.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-path-ingress
  annotations:
    # Optional: Adds rewrite if your application expects paths stripped
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: giropops.containers.expert
    http:
      paths:
      - path: /api/gerar-senha
        pathType: Prefix
        backend:
          service:
            name: giropops-senhas
            port:
              number: 5000
      - path: /api/senha
        pathType: Prefix
        backend:
          service:
            name: giropops-senhas
            port:
              number: 5000
